--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </div>
                     </form>
                 </article>
-
+<!--
                 <article class="map_article">
                     <div id="map"></div>
                     <script src="Geolocation.js">
@@ -98,14 +98,15 @@
                         <input type="submit" value="Submit">
                     </form>
                 </article>
-                <article>
+-->                <article>
                     Article test number 1
                 </article>
                 <article>
                     Article test number 2
                 </article>
-                <!--  <article class="video_article">
-                    <video width="320" height="240" id="video1">
+
+                <article class="video_article">
+                    <video width="320" height="240" id="video1" controls autoplay>
                         <source id="video_src_avi" src="https://archive.org/download/electricsheep-flock-247-7500-6/00247%3D07606%3D07606%3D07606.avi" type="video/avi" >
                         <source id="video_src_mp4" src="https://archive.org/download/electricsheep-flock-247-7500-6/00247%3D07606%3D07606%3D07606.mp4" type="video/mp4">
                         <source id="video_src_ogv"src="https://archive.org/download/electricsheep-flock-247-7500-6/00247%3D07606%3D07606%3D07606.ogv" type="video/ogv">
@@ -121,10 +122,10 @@
                             <input type="number" class="form_control" name="offset" value="0" placeholder="offset is in seconds">
                         </div>
                         <button type="submit" class="btn btn-default">Submit</button>
-                                            <script src="Video.js"></script>
+                        <script src="Video.js"></script>
 
                     </form>
-                </article> -->
+                </article>
             </section>
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
