--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
                         </div>
                     </form>
                 </article>
-<!--
                 <article class="map_article">
                     <div id="map"></div>
                     <script src="Geolocation.js">
@@ -98,7 +97,7 @@
                         <input type="submit" value="Submit">
                     </form>
                 </article>
--->                <article>
+                <article>
                     Article test number 1
                 </article>
                 <article>
@@ -112,6 +111,7 @@
                         <source id="video_src_ogv"src="https://archive.org/download/electricsheep-flock-247-7500-6/00247%3D07606%3D07606%3D07606.ogv" type="video/ogv">
                         Your browser does not support the video tag.
                     </video>
+                    <button onclick="rotateVideo()">rotate</button>
                     <form action="javascript:void(0)" class="form_inline" name="videoForm" onsubmit="formVideoSubmit()">
                         <div class="form-group">
                             <label>URL:</label>
@@ -125,6 +125,10 @@
                         <script src="Video.js"></script>
 
                     </form>
+                    <video width="200" height="150" id="video_preview">
+                        Your browser does not support the video tag.
+                    </video>
+                    <button onclick="previewVideo()">preview</button>
                 </article>
             </section>
         </div>
