--- a/index.html
+++ b/index.html
@@ -111,10 +111,12 @@
                         <source id="video_src_ogv"src="https://archive.org/download/electricsheep-flock-247-7500-6/00247%3D07606%3D07606%3D07606.ogv" type="video/ogv">
                         Your browser does not support the video tag.
                     </video>
+                    <canvas width="320" height="240" id="canvas_video"></canvas>
                     <form action="javascript:void(0)" class="form_inline" name="videoForm" onsubmit="formVideoSubmit()">
                         <div class="form-group">
                             <label>URL:</label>
                             <input type="url" class="form-control" name="url_video">
+
                         </div>
                         <div class="form_group">
                             <label>offset:</label>
@@ -130,7 +132,10 @@
                         Your browser does not support the video tag.
                     </video>
                     <button onclick="previewVideo()">preview</button>
+                    <input type="checkbox" value="" onclick="changeControls()">Hide default control
+                    <button onclick="mirrorVideo()">Mirror video</button>
                 </article>
+
             </section>
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
