--- a/index.html
+++ b/index.html
@@ -97,15 +97,9 @@
                         <input type="submit" value="Submit">
                     </form>
                 </article>
-                <article>
-                    Article test number 1
-                </article>
-                <article>
-                    Article test number 2
-                </article>
 
                 <article class="video_article">
-                    <video width="320" height="240" id="video1" controls autoplay>
+                    <video onclick="stopVideo(this)" width="320" height="240" id="video1" controls autoplay>
                         <source id="video_src_avi" src="https://archive.org/download/electricsheep-flock-247-7500-6/00247%3D07606%3D07606%3D07606.avi" type="video/avi" >
                         <source id="video_src_mp4" src="https://archive.org/download/electricsheep-flock-247-7500-6/00247%3D07606%3D07606%3D07606.mp4" type="video/mp4">
                         <source id="video_src_ogv"src="https://archive.org/download/electricsheep-flock-247-7500-6/00247%3D07606%3D07606%3D07606.ogv" type="video/ogv">
@@ -132,8 +126,35 @@
                         Your browser does not support the video tag.
                     </video>
                     <button onclick="previewVideo()">preview</button>
-                    <input type="checkbox" value="" onclick="changeControls()">Hide default control
+                    <input type="checkbox" value="" onclick="changeControls(1)">Hide default control
                     <button onclick="mirrorVideo()">Mirror video</button>
+                </article>
+
+                <article>
+                    <h1>Video bubble<br><br></h1>
+                    <video onclick="stopVideo(this)" id="video_bubble" width="320" height="320" autoplay>
+                        <source src="https://archive.org/download/electricsheep-flock-247-5000-1/00247%3D05011%3D05011%3D05011.mp4" type="video/mp4">
+                        <source src="https://archive.org/download/electricsheep-flock-247-5000-1/00247%3D05011%3D05011%3D05011.ogv" type="video/ogv">
+                        <source src="https://archive.org/download/electricsheep-flock-247-5000-1/00247%3D05011%3D05011%3D05011.avi" type="video/avi" >
+                        Your browser does not support the video tag.
+                    </video>
+                    <br>
+                    <br>
+                    <input type="checkbox" value="" checked onclick="changeControls(2)">Hide default control
+                </article>
+
+                <article>
+                    <h1>Video jukebox player<br><br></h1>
+                    <video onclick="stopVideo(this)" id="video_jukebox" width="320" height="240" controls>
+                        <source src="https://archive.org/download/video_rapid_201703/video_rapid_240x350.mp4" type="video/mp4">
+                        <source src="https://archive.org/download/video_rapid_201703/video_rapid_240x350.ogv" type="video/ogv">
+                        Your browser does not support the video tag.
+                    </video>
+                    <br>
+                    <button id="previous_jukebox" onclick="previous()" disabled>Previous</button>
+                    <h5>video</h5>
+                    <button id="next_jukebox" onclick="next()">Next</button>
+
                 </article>
 
             </section>
