--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header id="title">
-        <h1> Share <img id="logo" src="1f91d.png" alt="logo" /></h1>
+        <h1> Share <img id="logo" src="https://images.emojiterra.com/emojione/v2/512px/1f91d.png" alt="logo" /></h1>
     </header>
 
 
@@ -50,7 +50,7 @@
         </article>
         <section class="article_bottom">
             7
-            <img class= "share" src="1f91d.png">
+            <img class= "share" src="https://images.emojiterra.com/emojione/v2/512px/1f91d.png">
             <input class="comment" type="text">
         </section>
 
@@ -59,7 +59,7 @@
         </article>
         <section class="article_bottom">
             12
-            <img class= "share" src="1f91d.png">
+            <img class= "share" src="https://images.emojiterra.com/emojione/v2/512px/1f91d.png">
             <input class="comment" type="text">
         </section>
 
@@ -86,7 +86,7 @@
         </article>
         <section class="article_bottom">
             9
-            <img class= "share" src="1f91d.png">
+            <img class= "share" src="https://images.emojiterra.com/emojione/v2/512px/1f91d.png">
             <input class="comment" type="text">
         </section>
 
@@ -121,7 +121,7 @@
         </article>
         <section class="article_bottom">
             23
-            <img class= "share" src="1f91d.png">
+            <img class= "share" src="https://images.emojiterra.com/emojione/v2/512px/1f91d.png">
             <input class="comment" type="text">
         </section>
 
@@ -158,7 +158,7 @@
         </article>
         <section class="article_bottom">
             15
-            <img class= "share" src="1f91d.png">
+            <img class= "share" src="https://images.emojiterra.com/emojione/v2/512px/1f91d.png">
             <input class="comment" type="text">
         </section>
 
