--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--<meta name="viewport" content="initial-scale=1.0, user-scalable=no">-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Share</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
 </head>
 
@@ -22,7 +22,7 @@
         <div id="searchbar">
             <h2>Search</h2>
             <input class="search" type="text">
-            <input class="button" type="button">
+            <button></button>
         </div>
         <div>
             <h2>Profile</h2>
@@ -133,7 +133,7 @@
                 Your browser does not support the video tag.
             </video>
             <canvas width="320" height="240" id="canvas_video"></canvas>
-            <form action="javascript:void(0)" class="form_inline" name="videoForm" onsubmit="formVideoSubmit()">
+            <form action="javascript:void(0)" name="videoForm" onsubmit="formVideoSubmit()">
                 <fieldset>
                     <legend>Play with your videos !</legend>
                     <label for="url">URL:</label>
